fix: WT 13 error banner alignment issue

--- a/package/src/common/InfoBox/styles.module.css
+++ b/package/src/common/InfoBox/styles.module.css
@@ -7,7 +7,7 @@
   border-radius: 10px;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   position: relative;
   overflow: hidden;
   flex-direction: row;
@@ -61,8 +61,8 @@
 
 .child-node {
   display: flex;
-  flex-direction: row;
-  align-items: center;
+  flex-direction: column;
+  align-items: flex-start;
   width: 100%;
 }
 
